<resources>
    <string name="app_name">YourApp</string>

    <!-- ღილაკების ტექსტები -->
    <string name="button1_text">1</string>
    <string name="button2_text">2</string>
    <string name="button3_text">3</string>
    <string name="button4_text">4</string>
    <string name="button5_text">5</string>

    <!-- დამატებით ტექსტი მეხუთე ფრაგმენტისთვის -->
    <string name="fifth_fragment_text">ეს არის მეხუთე ფრაგმენტი</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
